--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "format": "prettier --write \"**/*.{js,jsx,html,scss}\"",
     "format:check": "prettier -c \"**/*.{js,jsx,html,scss}\"",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
